# ncdb-monitor

./: .gitignore  README.md  pyproject.toml
ncdb_monitor/: cli.py  config.py  generate.py  render.py
ncdb_monitor/scripts/: run_monitor.sh
ncdb_monitor/templates/: base.html  index.html  index2.html  index3.html  index4.html  obsspace.html
